# kube-robot

./: .gitignore  Cargo.toml  Dockerfile  Makefile
.github/workflows/: build-image.yml
src/: config.rs  lib.rs  main.rs
src/libs/: http.rs  issues.rs  kubernetes.rs  mod.rs
src/model/: harbor.rs  mod.rs
src/pkg/: mod.rs
src/pkg/etc/: checker.rs  config.rs  errors.rs  mod.rs
src/pkg/github/: issues.rs
src/pkg/http/: proxy.rs
src/pkg/kubernetes/: kubernetes.rs
src/pkg/model/: mod.rs  wechat.rs
src/pkg/trivy/: mod.rs  model.rs
tests/: github_test.rs  http_test.rs  setup.rs  trivy_test.rs
