[package]
name = "kube-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "robot"
path = "src/main.rs"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["tls", "json", "msgpack", "uuid"] }
reqwest = { version = "0.11", features = ["json", "native-tls", "rustls-tls"] }
http = '0.2.8'
lazy_static = "1.4.0"
tokio = "1.37.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
kube = { version = "0.91.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
chrono = "0.4.38"
thiserror = "1.0.63"
anyhow = "1.0.86"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tokio-test = "0.4.2"

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
